--- a/web/index.html
+++ b/web/index.html
@@ -38,8 +38,30 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <style>
+        .container {
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            /* Default Axis is X*/
+            justify-content: center;
+            /* Main Axis */
+            align-items: center;
+            /* Cross Axis */
+        }
+
+        .indicator {
+            width: 50vw;
+        }
+        body {
+  background-color: #000000;
+}
+    </style>
 </head>
-<body>
+<body style="overflow: hidden;">
+<div id="loading_indicator" class="container">
+  <img class="indicator" src="./assets/loading.gif" />
+</div>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
@@ -54,5 +76,18 @@
       });
     });
   </script>
+
+  <script>
+        window.onload = function () {
+            setTimeout(function () {
+                var loadingIndicator = document.getElementById("loading_indicator");
+                if (loadingIndicator) {
+                    loadingIndicator.remove();
+                }
+            }, 10000);
+        };
+  </script>
+
+
 </body>
 </html>
