Added meta tags

--- a/web/index.html
+++ b/web/index.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
+    <!--
+      If you are serving your web app in a path other than the root, change the
+      href value below to reflect the base path you are serving from.
 
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
+      The path provided below has to start and end with a slash "/" in order for
+      it to work correctly.
 
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+      For more details:
+      * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="$FLUTTER_BASE_HREF">
+      This is a placeholder for base href that will be replaced by the value of
+      the `--base-href` argument provided to `flutter build`.
+    -->
+    <base href="$FLUTTER_BASE_HREF">
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+    <meta charset="UTF-8">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="description" content="Ajay's Site">
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="my_site">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="my_site">
+    <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <meta name="keywords"
+          content="ajay, projectaj, project_aj, Project_aj, projectaj14, flutter, flutter web">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Ajay Kumar">
+    <meta property="og:description" content="All links for Ajay's and more">
+    <meta property="og:image" content=”./assets/og_image.png”/>
 
-  <title>my_site</title>
-  <link rel="manifest" href="manifest.json">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <script>
+    <title>Ajay Kumar</title>
+    <link rel="manifest" href="manifest.json">
+
+    <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
-  </script>
-  <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
-  <style>
+
+    </script>
+    <!-- This script adds the flutter initialization JS code -->
+    <script src="flutter.js" defer></script>
+    <style>
         .container {
             width: 100vw;
             height: 100vh;
@@ -56,13 +64,14 @@
         body {
   background-color: #000000;
 }
+
     </style>
 </head>
 <body style="overflow: hidden;">
 <div id="loading_indicator" class="container">
-  <img class="indicator" src="./assets/loading.gif" />
+    <img class="indicator" src="./assets/loading.gif"/>
 </div>
-  <script>
+<script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
@@ -75,9 +84,10 @@
         return appRunner.runApp();
       });
     });
-  </script>
 
-  <script>
+</script>
+
+<script>
         window.onload = function () {
             setTimeout(function () {
                 var loadingIndicator = document.getElementById("loading_indicator");
@@ -86,6 +96,7 @@
                 }
             }, 10000);
         };
-  </script>
+
+</script>
 </body>
 </html>
