--- a/web/index.html
+++ b/web/index.html
@@ -2,101 +2,140 @@
 <html>
 <head>
     <!--
-      If you are serving your web app in a path other than the root, change the
-      href value below to reflect the base path you are serving from.
+If you are serving your web app in a path other than the root, change the
+href value below to reflect the base path you are serving from.
 
-      The path provided below has to start and end with a slash "/" in order for
-      it to work correctly.
+The path provided below has to start and end with a slash "/" in order for
+it to work correctly.
 
-      For more details:
-      * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+For more details:
+* https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
-      This is a placeholder for base href that will be replaced by the value of
-      the `--base-href` argument provided to `flutter build`.
-    -->
-    <base href="$FLUTTER_BASE_HREF">
+This is a placeholder for base href that will be replaced by the value of
+the `--base-href` argument provided to `flutter build`.
+-->
+    <base href="$FLUTTER_BASE_HREF" />
 
-    <meta charset="UTF-8">
-    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="Ajay's Site">
+    <meta charset="UTF-8" />
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+    <meta name="description" content="Ajay's Site" />
 
     <!-- iOS meta tags & icons -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="my_site">
-    <link rel="apple-touch-icon" href="icons/Icon-192.png">
-    <meta name="keywords"
-          content="ajay, projectaj, project_aj, Project_aj, projectaj14, flutter, flutter web">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="my_site" />
+    <link rel="apple-touch-icon" href="icons/Icon-192.png" />
+    <meta name="keywords" content="ajay, projectaj, project_aj, Project_aj, projectaj14, flutter, flutter web" />
 
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Ajay Kumar">
-    <meta property="og:description" content="All links for Ajay's and more">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Ajay Kumar" />
+    <meta property="og:description" content="All links for Ajay's and more" />
     <meta property="og:image" content=”./assets/og_image.png”/>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="icon" type="image/png" href="favicon.png" />
 
     <title>Ajay Kumar</title>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json" />
 
     <script>
-    // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = null;
-
-    </script>
+            // The value below is injected by flutter build, do not touch.
+            var serviceWorkerVersion = null;
+        </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
     <style>
-        .container {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            /* Default Axis is X*/
-            justify-content: center;
-            /* Main Axis */
-            align-items: center;
-            /* Cross Axis */
-        }
-
-        .indicator {
-            width: 50vw;
-        }
-        body {
-  background-color: #000000;
-}
-
-    </style>
+            body {
+                background-color: #000000;
+            }
+        </style>
 </head>
 <body style="overflow: hidden;">
-<div id="loading_indicator" class="container">
-    <img class="indicator" src="./assets/loading.gif"/>
+<!-- Loading indicator -->
+<div id="loading">
+    <style>
+                body {
+                    inset: 0;
+                    overflow: hidden;
+                    margin: 0;
+                    padding: 0;
+                    position: fixed;
+                }
+
+                #loading {
+                    align-items: center;
+                    display: flex;
+                    height: 100%;
+                    justify-content: center;
+                    width: 100%;
+                }
+
+                #loading img {
+                    animation: 1s ease-in-out 0s infinite alternate breathe;
+                    opacity: 0.66;
+                    transition: opacity 0.4s;
+                }
+
+                #loading.main_done img {
+                    opacity: 1;
+                }
+
+                #loading.init_done img {
+                    animation: 0.33s ease-in-out 0s 1 forwards zooooom;
+                    opacity: 0.05;
+                }
+
+                @keyframes breathe {
+                    from {
+                        transform: scale(1);
+                    }
+
+                    to {
+                        transform: scale(0.95);
+                    }
+                }
+
+                @keyframes zooooom {
+                    from {
+                        transform: scale(1);
+                    }
+
+                    to {
+                        transform: scale(10);
+                    }
+                }
+            </style>
+    <img src="./assets/loading.gif" alt="Loading indicator..." />
 </div>
 <script>
-    window.addEventListener('load', function(ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        }
-      }).then(function(engineInitializer) {
-        return engineInitializer.initializeEngine();
-      }).then(function(appRunner) {
-        return appRunner.runApp();
-      });
-    });
+            window.addEventListener("load", function (ev) {
+                // Download main.dart.js
+                var loading = document.querySelector("#loading");
 
-</script>
+                _flutter.loader
+                    .loadEntrypoint({
+                        serviceWorker: {
+                            serviceWorkerVersion: serviceWorkerVersion,
+                        },
+                    })
+                    .then(function (engineInitializer) {
+                        loading.classList.add("main_done");
 
-<script>
-        window.onload = function () {
-            setTimeout(function () {
-                var loadingIndicator = document.getElementById("loading_indicator");
-                if (loadingIndicator) {
-                    loadingIndicator.remove();
-                }
-            }, 10000);
-        };
+                        return engineInitializer.initializeEngine();
+                    })
+                    .then(function (appRunner) {
+                        loading.classList.add("init_done");
 
-</script>
+                        return appRunner.runApp();
+                    })
+                    .then(function (app) {
+                        // Wait a few milliseconds so users can see the "zoooom" animation
+                        // before getting rid of the "loading" div.
+                        window.setTimeout(function () {
+                            loading.remove();
+                        }, 200);
+                    });
+            });
+        </script>
 </body>
 </html>
