Updated images and links

--- a/web/index.html
+++ b/web/index.html
@@ -29,11 +29,11 @@ the `--base-href` argument provided to `flutter build`.
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Ajay Kumar" />
-    <meta property="og:description" content="All links for Ajay's and more" />
+    <meta property="og:description" content="All links for Ajay and more" />
     <meta property="og:image" content=”./assets/og_image.png”/>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.ico" />
 
     <title>Ajay Kumar</title>
     <link rel="manifest" href="manifest.json" />
