--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,9 @@ the `--base-href` argument provided to `flutter build`.
     <meta property="og:title" content="Ajay Kumar" />
     <meta property="og:description" content="All links for Ajay and more" />
     <meta property="og:image" content=”./assets/og_image.png”/>
-
+    
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.ico" />
 
