Updated images and links

--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@ the `--base-href` argument provided to `flutter build`.
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="my_site" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
-    <meta name="keywords" content="ajay, projectaj, project_aj, Project_aj, projectaj14, flutter, flutter web" />
+    <meta name="keywords" content="ajay, ajaycodex, projectaj, project_aj, Project_aj, projectaj14, flutter, flutter web" />
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Ajay Kumar" />
